[java-inspections] NullableStuffInspection: avoid possible NPE due to contains(null) check
Fixes EA-257931 - NPE: NullableNotNullManager.lambda$findExplicitNullabilityAnnotation$0

GitOrigin-RevId: 03529307828282912341542535639942fa18c26b